tests/should_fail/bug/1439.stderr
error: Empty matches are forbidden in Pearlite, because Why3 types are always inhabited.
 --> 1439.rs:4:12
  |
4 | #[requires(match opt { })]
  |            ^^^^^^^^^^^^^

error: aborting due to 1 previous error

